<resources>
    <string name="app_name">PennyWise</string>
    <string name="register_link">Don\'t have an account? Register now</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">yourname@example.com</string>
    <string name="description">Manage your finances easily using our intuitive and user-friendly interface and set financial goals and monitor your progress</string>
    <string name="Title">Welcome to your ultimate finance tracker. Manage your spending seamlessly.</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="register">Register</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="top_spending_categories">Top Spending Categories</string>
        <string-array name="filter_options">
            <item>Day</item>
            <item>Week</item>
            <item>Month</item>
        </string-array>


</resources>