<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:padding="16dp">-->

<!--    <EditText-->
<!--        android:id="@+id/emailEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="Email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/passwordEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="Password"-->
<!--        android:inputType="textPassword"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/emailEditText"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/firstnameEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="First Name"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintTop_toBottomOf="@id/passwordEditText"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/lastnameEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="Last Name"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintTop_toBottomOf="@id/firstnameEditText"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/dobTextView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="Date of Birth"-->
<!--        android:background="@android:drawable/editbox_background"-->
<!--        android:gravity="center_vertical"-->
<!--        android:padding="16dp"-->
<!--        android:focusable="true"-->
<!--        android:clickable="true"-->
<!--        app:layout_constraintTop_toBottomOf="@id/lastnameEditText"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/RegisterButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Register"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dobTextView"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/googleSignInButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Continue with Google"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/RegisterButton"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->






<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0ec70"
    android:padding="16dp">

    <!-- App Name TextView -->
    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo/Image -->

    <!-- Email EditText -->

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/appNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- First Name EditText -->
    <EditText
        android:id="@+id/firstnameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Last Name EditText -->
    <EditText
        android:id="@+id/lastnameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/firstnameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Date of Birth TextView -->
    <TextView
        android:id="@+id/dobTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/date_of_birth"
        android:background="@android:drawable/editbox_background"
        android:gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="16dp"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lastnameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/primary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/dobTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Google Sign-In Button -->
    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_google"
        android:backgroundTint="@color/primary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
